# local-ai-assistant

./: .env.example  Dockerfile.api  Dockerfile.frontend  auth.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py  streamlit_app.py
.github/workflows/: main.yml
charts/devops-assistant/: Chart.yaml  values.yaml
charts/devops-assistant/templates/: service-api.yaml
charts/local-ai-assistant/: values.yaml
charts/local-ai-assistant/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-api.yaml  deployment-frontend.yaml  deployment-ollama.yaml  service-frontend.yaml  service-ollama.yaml
core/: config.py  llm.py  middleware.py  security.py
k8s/: namespace.yaml
k8s/base/: configmap.yaml  deployment-api.yaml  deployment-frontend.yaml  deployment-ollama.yaml  service-api.yaml  service-frontend.yaml  service-ollama.yaml
prompts/: system_prompt.txt
routes/: ai.py  users.py
