[project]
name = "local-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.0",
    "itsdangerous>=2.2.0",
    "openai>=2.32.0",
    "passlib[bcrypt]>=1.7.4",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
    "starlette>=1.0.0",
    "streamlit>=1.56.0",
]
